# FlowCount

./: .gitignore  .pre-commit-config.yaml  README.md  drifting_dots.py  drifting_dots_v3.ipynb  drifting_dots_v3.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
configs/: default.yaml
experiments/: run.py
flow_count/: drifting_dots.py  drifting_dots_v2.py  drifting_dots_v3.py  drifting_dots_v3_make_dataset.py  train_counting_model.py
notebooks/: drifting_dots_v3.ipynb
